<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.admin.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"

            android:background="@drawable/project_icon_2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext_background_2"
            android:gravity="center"
            android:hint="@string/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background_2"
            android:gravity="center"
            android:hint="@string/password" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background_2"
            android:text="@string/sign_in" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
